--- a/Hyperlink_Project/project.html
+++ b/Hyperlink_Project/project.html
@@ -11,7 +11,7 @@
     </p>
     <p>
         Click the link to see my project
-        <a href="https://github.com/subhasish20">LInk</a>
+        <a href="https://github.com/subhasish20">Link</a>
     </p>
 </body>
 </html>
