--- a/student_registration_form/index.html
+++ b/student_registration_form/index.html
@@ -12,5 +12,11 @@
             Welcome to DigiLocker
         </h2>
     </nav>
+        <form action="/" id="form">
+            <br>
+            <input type="text" placeholder="Enter your mobile number">
+            <br>
+            <input type="text" placeholder="Enter your password"> 
+        </form>
 </body>
 </html>
